# website

./: .gitignore  .pdm-python  404.md  CLAUDE.md  CNAME  _toc.yml  aboutme.md  aboutsite.md  index.md  myst.yml  package-lock.json  posts.md  projects.md  pyproject.toml  support.md
.github/workflows/: deploy.yml
plugins/: blog_listing.py  rss_gen.py
posts/: callserviceinros2launch.md  helloworld.md  howtoarduinodocker.md  howtowsldocker.md  mck142pro.md  rosworld2020.md
posts/ttrpg/: introducingdmslog.md  thebandoleers026.md  thebandoleers027.md
projects/: aot_wmr_vis.md  bt_myo_gamepad.md  configs.md  dfa.md  dockerfiles.md  graphics.md  iosfinalproject.md  liquidhandling.md  luckierdodge.md  madsci.md  mck142pro.md  nfa.md  nfae.md  niurover.md  sieve.md  startpage.md  virtualcanvas.md  website.md  wei.md
